crates/rome_analyze/tests/specs/useBlockStatements.js.snap
---
source: crates/rome_analyze/tests/spec_tests.rs
assertion_line: 96
expression: useBlockStatements.js
---
# Input
```js
// invalid
if (x) x;
if (x) {
  x;
} else y;
if (x) {
  x;
} else if (y) y;
for (;;);
for (p in obj);
for (x of xs);
do;
while (x);
while (x);
with (x);

```

# Diagnostics
```
error[useBlockStatements]: Block statements are preferred in this position.
  ┌─ useBlockStatements.js:2:8
  │
2 │ if (x) x;
  │        ^^ Block statements are preferred in this position.

Replace with strict equality
    | @@ -1,5 +1,5 @@
0 0 |   // invalid
1   | - if (x) x;
  1 | + if (x) {x;}
2 2 |   if (x) {
3 3 |     x;
4 4 |   } else y;


```

```
error[useBlockStatements]: Block statements are preferred in this position.
  ┌─ useBlockStatements.js:5:8
  │
5 │ } else y;
  │        ^^ Block statements are preferred in this position.

Replace with strict equality
    | @@ -2,7 +2,7 @@
1 1 |   if (x) x;
2 2 |   if (x) {
3 3 |     x;
4   | - } else y;
  4 | + } else {y;}
5 5 |   if (x) {
6 6 |     x;
7 7 |   } else if (y) y;


```

```
error[useBlockStatements]: Block statements are preferred in this position.
  ┌─ useBlockStatements.js:6:1
  │  
6 │ ┌ if (x) {
7 │ │   x;
8 │ │ } else if (y) y;
  │ └────────────────^ Block statements are preferred in this position.

Replace with strict equality


```

```
error[useBlockStatements]: Block statements are preferred in this position.
  ┌─ useBlockStatements.js:8:15
  │
8 │ } else if (y) y;
  │               ^^ Block statements are preferred in this position.

Replace with strict equality
    | @@ -5,7 +5,7 @@
4 4 |   } else y;
5 5 |   if (x) {
6 6 |     x;
7   | - } else if (y) y;
  7 | + } else if (y) {y;}
8 8 |   for (;;);
9 9 |   for (p in obj);
10 10 |   for (x of xs);


```


